<resources>
    <string name="app_name">MantraFingerPrint</string>
    <string name="Bank_HOlder_Name">Name of Account Holder Name as per Bank Passbook </string>
    <string name="welcome_tag">Please Set Your Profile Picture</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Employee ID: </string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Init">INIT</string>
    <string name="UnInit">UNINIT</string>
    <string name="ExtractISO">ISO(FMR)</string>
    <string name="ExtractWSQ">WSQ</string>
    <string name="MatchISO">MATCH ISO</string>
    <string name="foorLoop">Init/Uninit</string>
    <string name="ClearLog">CLEAR LOG</string>
    <string name="SyncCapture">CAPTURE</string>
    <string name="StopSyncCapture">STOP CAP</string>
    <string name="WriteBit">Write Bit</string>
    <string name="ReadBit">Read Bit</string>
    <string name="ChangeKey">Change Key</string>
    <string name="GetKey">Get Key</string>


    <!--LoginScreen-->
    <string name="login">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="SignIn">LogIn</string>
    <string name="submit">Submit</string>
    <string name="projectname">Enter Project Name</string>
    <string name="employeeId">Enter Employee Id </string>
    <string name="password">Enter Password</string>
    <string name="Server">Server</string>
    <string name="Select">Select</string>
    <string name="welcome">Project Login</string>
    <string name="Upload">Upload</string>
    <string name="Success">Success</string>
    <string name="Loading">Loading</string>
    <string name="array_marital_status" />


    <!--Dashboard-->
    <string name="logout">Logout</string>

    <string-array name="array_gender">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Unknown</item>
    </string-array>


    <string-array name="array_marital_status">
        <item> Andhra Pradesh</item>
        <item> Arunachal Pradesh</item>
        <item> Assam</item>
        <item> Bihar</item>
        <item> Chhattisgarh</item>
        <item> Goa</item>
        <item> Gujarat</item>
        <item> Haryana</item>
        <item> Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item> Kerala</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item> Manipur</item>
        <item>Meghalaya</item>
        <item> Mizoram</item>
        <item>Nagaland</item>
        <item>Odisha</item>
        <item> Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item> Telangana</item>
        <item>Tripura</item>
        <item> Uttar Pradesh</item>
        <item>Uttarakhand</item>
        <item>West Bengal</item>

    </string-array>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="email">Email</string>
    <string name="aadhar_card_no">Aadhar Card No</string>
    <string name="name_of_worker">Name of Worker</string>
    <string name="personal_details">Personal Details</string>
    <string name="Contact_details">Permanent Address Details</string>
    <string name="Contact_current_details">Current Address Details</string>
    <string name="left_thumb">left Thumb</string>
    <string name="right_thumb">Right Thumb</string>
    <string name="next">Next</string>
    <string name="previous">Skip</string>
    <string name="salary">Salary</string>

    <string-array name="array_technology">
        <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string-array>
    <string name="title_activity_show_details">Worker Details</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="project_name">Project Name</string>
    <string name="emp_id">Employee Id</string>
    <string name="upload_all">Upload All</string>
    <string name="upload_details">Upload Details</string>
    <string name="details">Details</string>
    <string name="array_transfer">
         <item>Android</item>
        <item>Java</item>
        <item>Php</item>
        <item>Hadoop</item>
        <item>Sap</item>
        <item>Python</item>
        <item>Ajax</item>
        <item>C++</item>
        <item>Ruby</item>
        <item>Rails</item>
        <item>.Net</item>
        <item>Perl</item>
    </string>
    <string name="companyName">Sant Vamanbhau Enterprises</string>
    <string name="employeename" >Enter Employee Name</string>
    <string name="empId" >Enter Employee Id</string>
    <string name="Emp_password">Enter Employee password</string>

</resources>
