<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Main.ProjectLogn_In">

    <LinearLayout
        android:layout_width="276dp"
        android:layout_height="507dp"
        android:layout_gravity="center_horizontal|center_vertical"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/candlemustard"
            android:text="Project Login"
            android:textAlignment="center"
            android:textColor="@color/primary_text"
            android:textSize="45dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_project_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:hint="@string/projectname"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:shadowColor="#014e96"
                android:textAlignment="center"
                android:textColor="#014e96"
                android:textColorHint="#014e96"
                android:textSize="20dp"
                android:textStyle="bold" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_employee_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:hint="@string/employeeId"
                android:inputType="text"
                android:paddingLeft="10dp"
                android:shadowColor="@color/accent"
                android:textAlignment="center"
                android:textColor="#014e96"
                android:textColorHint="#014e96"
                android:textSize="20dp"
                android:textStyle="bold"
                android:visibility="gone" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/normal"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:shadowColor="@color/accent"
                android:textAlignment="center"
                android:textColor="#014e96"
                android:textColorHint="#014e96"
                android:textSize="20dp" />
        </android.support.design.widget.TextInputLayout>


        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_border"
            android:fontFamily="@font/medium"
            android:text="LogIn"
            android:textAllCaps="false"
            android:textColor="@color/primary_text"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>